// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildUpdates commentPlaceholder 1`] = `
Array [
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ # This is a comment }}",
      },
      "replaceText": "",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - image (width) 1`] = `
Array [
  Object {
    "insertInlineImage": Object {
      "location": Object {
        "index": 42,
        "segmentId": "",
      },
      "objectSize": Object {
        "height": undefined,
        "width": Object {
          "magnitude": 150,
          "unit": "PT",
        },
      },
      "uri": "http://example.cat",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ catUrl | image(150) }}",
      },
      "replaceText": "",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - image (width, height) 1`] = `
Array [
  Object {
    "insertInlineImage": Object {
      "location": Object {
        "index": 42,
        "segmentId": "",
      },
      "objectSize": Object {
        "height": Object {
          "magnitude": 180,
          "unit": "PT",
        },
        "width": Object {
          "magnitude": 150,
          "unit": "PT",
        },
      },
      "uri": "http://example.cat",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ catUrl | image(150, 80) }}",
      },
      "replaceText": "",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - image 1`] = `
Array [
  Object {
    "insertInlineImage": Object {
      "location": Object {
        "index": 42,
        "segmentId": "",
      },
      "objectSize": Object {
        "height": undefined,
        "width": undefined,
      },
      "uri": "http://example.cat",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ catUrl | image }}",
      },
      "replaceText": "",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - text (number) 1`] = `
Array [
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ accounts[0].money }}",
      },
      "replaceText": "1500",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - text 1`] = `
Array [
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ user.name.first }}",
      },
      "replaceText": "Thibaud",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - unknown 1`] = `Array []`;

exports[`buildUpdates unknownPlaceholder 1`] = `Array []`;
